# simdc

./: CMakeLists.txt  LICENSE  README.md  main.cpp  simdc.cpp
